final layout issues with filmstrip resolved

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -61,6 +61,10 @@
     height: 100%;
   }
 
+  .fs-container {
+    width: 420px;
+  }
+
   .small-cell {
       width: 20%;
   }
